update user enpoint
